--- a/documentation/proposal.tex
+++ b/documentation/proposal.tex
@@ -1,16 +1,19 @@
 \documentclass[a4paper,12pt]{article}
 \usepackage{authblk}
 \usepackage{geometry}
-\geometry{margin = 1in}
+\geometry{left = 1.5in, right = 1.25in, top = 1.25in, bottom = 1.25in}
 \usepackage{graphicx}
 
 \title{
 \textbf{
-Kathmandu University \\ \large{Department of Artificial Intelligence}\\ \normalsize{Panchkhal, Kavre}\\[2cm]}
+    Kathmandu University \\
+    \large{Department of Artificial Intelligence}\\
+    \normalsize{Panchkhal, Kavre}\\[2cm]}
     \includegraphics[width=3cm]{KU-Logo.png}\\[2cm]
     \normalsize{A Project Proposal\\on\\
     \textbf{"Data Compression using Deep Learning"}}\\[0.5cm]
-    \normalsize[Code No.: AISP 301]\\[2cm]
+    \normalsize{[Code No.: AISP 301]\\
+    (For partial fulfillment of III/I Year/Semester in Artificial Intelligence)}\\[2cm]
 }
 
 \author[ ]{\normalsize{
@@ -20,20 +23,22 @@ Kathmandu University \\ \large{Department of Artificial Intelligence}\\ \normals
         Yajjyu Tuladhar(Roll no. 27)
 }}
 
-\affil[ ]{\vspace{2cm}}
+\affil[ ]{\vspace{1.5cm}}
 \affil[ ]{\normalsize{
         Submitted to: \linebreak
         Subodh Acharya \linebreak
-        Lecturer \linebreak
         Department of Artificial Intelligence
 }}
+\affil[ ]{}
 
 \date{\normalsize{Submission Date: \today}}
 
 \begin{document}
 
+\newgeometry{margin = 1in}
 \maketitle
 \thispagestyle{empty}
+\restoregeometry
 
 \newpage
 \setcounter{page}{1}
