--- a/documentation/proposal.tex
+++ b/documentation/proposal.tex
@@ -9,7 +9,7 @@
     Kathmandu University \\
     \large{Department of Artificial Intelligence}\\
     \normalsize{Panchkhal, Kavre}\\[2cm]}
-    \includegraphics[width=3cm]{KU-Logo.png}\\[2cm]
+    % \includegraphics[width=3cm]{KU-Logo.png}\\[2cm]
     \normalsize{A Project Proposal\\on\\
     \textbf{"Data Compression using Deep Learning"}}\\[0.5cm]
     \normalsize{[Code No.: AISP 301]\\
